src/main/java/syntactic/test/passing/asignArray.ru
start {
    test[1] = new A();
}

/? CORRECTO: ANALISIS SINTACTICO