src/main/java/syntactic/test/failing/newArrayWithputSize.ru
start {
    x = new Int[];
}

/? ERROR: SINTACTICO
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | 2 | 17 | Se esperaba expresión pero se encontró CLOSE_BRACKET: ] |